GAIM: The Pimpin' Penguin IM Clone thats good for the soul! 

version 0.11.0:
	* multiple connections
	* logs now stored to ~/.gaim/logs rather than ~/.gaim/SN/

version 0.10.3 (10/09/2000):
	* Segfault when viewing user info fixed
	* libdb problem fixed

version 0.10.2 (10/07/2000):
	* A few fixes to the URL parser.
	* Better placement of smiley dialog
	* Improved log file readibility
	* Code cleanups (thanks kylev)
	* Fixed problem when closing away message box (thanks bmiller)
	* sprintf() problem on some systems
	* Various small bug fixes

version 0.10.1 (09/15/2000):
	* Better chatroom logging
	* Oscar works again. Pay no attention to Slashdot.
	* gtkhtml handles background colours better.
	* A third conversation window display preference.
	* Better support for things like Sawfish

version 0.10.0 (09/11/2000): 
	* New Smiley Faces and Pixmaps added.
	* Smiley faces now properly wrap in the conversation windows.
	* Smiley dialog
	* Fixed 0-byte file segfault.
	* Borderless buttons (for that cool pop-up look)
	* Fixed some resizing bugs
	* Added Ctrl+{B/I/U/S} hotkeys to conversation windows.
	* Added Ctrl+(number) hotkeys to insert smileys in conversation windows.
	* Support for %n, %d, and %t in away messages.  Thanks bmiller!
	* Background colors
	* Redesigned preferences dialog
	* Redesigned conversation dialog
	* Removed the Lag-O-Meter (Lag-O-Meter is now a plugin)
	* Socks 4/5 Proxy works
	* Buddy Pounces are now saved in .gaimrc
	* Buddy Chats are now saved in .gaimrc
	* Ability to merge gaim, aim2, aim4 buddylists. Thanks again bmiller!
	* ICQ-style aliases. This lets you change the name you see your buddy
	  as. For example, if your buddy's SN is 'CouldntGetMyName', you can
	  alias him as 'Loser'.
	* Compile with GNOME bits if available
	* Added GNOME Url Handler as an available web-browser 
	* Added the S html tag. 		
	* Optionally Ignore TiK's Automated Messages
	* Option to beep instead of play sound